--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -32,7 +32,6 @@
     <string name="register">회원가입</string>
     <string name="sign_in_via_webview">WebView를 통하여 로그인</string>
     <string name="sign_in_via_cookies">쿠키를 사용하여 로그인</string>
-    <string name="display_name">별명</string>
     <string name="sign_in_first">먼저 로그인하세요.</string>
 
     <string name="default_display_name">작은 하마</string>
@@ -47,8 +46,6 @@
 
     <string name="invalid_download_location">다운로드 위치가 잘못되었습니다. 설정을 확인하세요.</string>
 
-    <string name="cellular_network_warning">모바일 데이터를 사용하는 중입니다.</string>
-
     <string name="clipboard_gallery_url_snack_message">클립보드에 갤러리 주소가 있습니다.</string>
     <string name="clipboard_gallery_url_snack_action">보기</string>
 
@@ -61,9 +58,7 @@
     <string name="error_cant_find_activity">앱을 찾을 수 없음</string>
     <string name="error_cannot_parse_the_url">URL을 분석할 수 없음</string>
     <string name="error_not_folder_path">폴더 경로가 아님</string>
-    <string name="error_no_provider">제공자가 없음</string>
     <string name="error_decoding_failed">디코딩 실패</string>
-    <string name="error_not_found">찾을 수 없음</string>
     <string name="error_empty">비어 있음</string>
     <string name="error_invalid_archive">잘못된 압축 파일</string>
     <string name="error_reading_failed">읽기 실패</string>
@@ -131,7 +126,6 @@
     <string name="delete">삭제</string>
     <string name="delete_quick_search_title">빠른 검색 삭제</string>
     <string name="delete_quick_search_message">\"%s\" 항목을 삭제하시겠습니까?</string>
-    <string name="no_quick_search">빠른 검색 목록이 여기에 표시됩니다.</string>
     <string name="add_quick_search_tip">갤러리 목록의 상태가 빠른 검색으로 저장됩니다. 검색 패널의 상태를 저장하려면 먼저 검색을 해야 합니다.</string>
     <string name="readme">README</string>
     <string name="image_search_not_quick_search">이미지 검색은 빠른 검색에 추가할 수 없습니다.</string>
@@ -154,7 +148,6 @@
     <plurals name="page_count">
         <item quantity="other">%d 페이지</item>
     </plurals>
-    <string name="favorites">즐겨찾기</string>
     <string name="torrent_count">토렌트 (%d)</string>
     <string name="share">공유</string>
     <string name="rate">평가</string>
@@ -252,7 +245,6 @@
     <string name="download_remove_dialog_message_2">%d개 항목을 다운로드 목록에서 제거하시겠습니까?</string>
     <string name="download_remove_dialog_check_text">이미지 파일 삭제</string>
     <string name="stat_download_action_stop_all">모두 중지</string>
-    <string name="drawer_download_label_title">레이블</string>
     <string name="default_download_label_name">기본</string>
     <string name="download_move_dialog_title">이동</string>
     <string name="download_labels">다운로드 레이블</string>
@@ -268,7 +260,6 @@
     <string name="added_to_download_list">다운로드 목록에 추가됨</string>
 
     <!-- Download label -->
-    <string name="no_download_label">다운로드 레이블이 여기에 표시됩니다.</string>
     <string name="add">추가</string>
     <string name="new_label_title">새 레이블</string>
     <string name="label_text_is_empty">레이블 텍스트가 비어 있습니다.</string>
@@ -305,7 +296,7 @@
     <string name="hosts">사용자 지정 hosts.txt</string>
     <string name="hosts_tip">hosts.txt</string>
     <string name="hosts_host">호스트</string>
-    <string name="hosts_ip">IP1(+IP2+IP3...)</string>
+    <string name="hosts_ip">IP1(+IP2+IP3…)</string>
     <string name="add_host">호스트 추가</string>
     <string name="add_host_add">추가</string>
     <string name="edit_host">호스트 편집</string>
@@ -318,7 +309,6 @@
     <string name="page_menu_title">페이지 %d</string>
     <string name="page_menu_save">저장</string>
     <string name="page_menu_save_to">다른 이름으로 저장</string>
-    <string name="page_menu_add_bookmark">북마크에 추가</string>
     <string name="gallery_menu_title">메뉴</string>
     <string name="share_image">이미지 공유</string>
     <string name="image_saved">이미지를 %s 경로에 저장함</string>
@@ -358,7 +348,6 @@
     <string name="settings_eh_show_tag_translations_summary">영어 태그 대신 번역된 태그를 표시합니다. 데이터 파일을 다운로드하는데 시간이 걸립 수 있습니다.</string>
     <string name="settings_eh_tag_translations_source">Placeholder</string>
     <string name="settings_eh_tag_translations_source_url">https://placeholder</string>
-    <string name="settings_eh_cellular_network_warning">모바일 데이터 경고</string>
 
     <string name="settings_read">읽기</string>
     <string name="settings_read_screen_rotation">화면 회전</string>
@@ -409,7 +398,6 @@
     <string name="settings_download_download_origin_image_summary">이 옵션은 위험합니다! 509 오류가 발생할 수 있습니다.</string>
     <string name="settings_download_restore_download_items">다운로드 항목 복구</string>
     <string name="settings_download_restore_download_items_summary">다운로드 위치에 존재하는 모든 다운로드 항목 복구</string>
-    <string name="settings_download_restoring">복구 중</string>
     <string name="settings_download_restore_not_found">복구할 다운로드 항목을 찾을 수 없습니다.</string>
     <string name="settings_download_restore_failed">복구하지 못했습니다.</string>
     <string name="settings_download_restore_successfully">%d개 항목을 복구했습니다.</string>
@@ -456,18 +444,12 @@
     <string name="settings_about_source">소스 코드</string>
     <string name="settings_about_version">빌드 버전</string>
 
-    <string name="proxy_enable">사용</string>
-    <string name="proxy_enabled">사용함</string>
-    <string name="proxy_disabled">사용 안 함</string>
     <string name="proxy_direct">다이렉트</string>
     <string name="proxy_system">시스템 프록시</string>
     <string name="proxy_host_or_ip">호스트 또는 IP</string>
     <string name="proxy_port">포트</string>
-    <string name="proxy_domain_not_supported">지원하지 않는 도메인입니다.</string>
     <string name="proxy_invalid_port">잘못된 포트입니다.</string>
 
-    <string name="cant_get_data_dir">데이터 디렉터리를 찾을 수 없습니다.</string>
-    <string name="cant_find_any_data">데이터를 가져올 수 없습니다.</string>
     <string name="cant_read_the_file">파일을 읽을 수 없습니다.</string>
 
     <string name="app_language_system">시스템 언어 (기본값)</string>
@@ -485,9 +467,7 @@
     <string name="move_favorites_dialog_title">즐겨찾기 이동</string>
     <string name="default_favorites_collection">기본 즐겨찾기 컬렉션</string>
     <string name="let_me_select">직접 선택</string>
-    <string name="favorites_info">즐겨찾기 정보</string>
     <string name="collections">컬렉션</string>
-    <string name="count">개수</string>
     <string name="need_sign_in">로그인 필요</string>
 
     <!-- Progress Scene -->
